--- a/package.json
+++ b/package.json
@@ -10,9 +10,17 @@
         "production": "mix --production"
     },
     "devDependencies": {
-        "axios": "^0.25",
-        "laravel-mix": "^6.0.6",
+        "axios": "^1.7.7",
+        "laravel-mix": "^6.0.49",
         "lodash": "^4.17.19",
-        "postcss": "^8.1.14"
+        "postcss": "^8.4.47",
+        "resolve-url-loader": "^5.0.0",
+        "sass": "^1.79.3",
+        "sass-loader": "^12.1.0",
+        "tailwindcss": "^3.4.13",
+        "webpack": "^5.95.0"
+    },
+    "dependencies": {
+        "autoprefixer": "^10.4.20"
     }
 }
